--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="de">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="Permissions-Policy" content="browsing-topics=()">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Anna Müller Beauty Room</title>
     <link rel="stylesheet" href="CSS/style.css" />
@@ -43,7 +44,7 @@
 
       <div class="logo">
         <a href="index.html"
-          ><img src="Bilder/logo.png" alt="Logo Anna Müller Beauty Room" aria-label="Logo Anna Müller Beauty Room" loading="lazy"
+          ><img src="./Bilder/Logo_1.png" alt="Logo Anna Müller Beauty Room" aria-label="Logo Anna Müller Beauty Room"
         /></a>
       </div>
 
@@ -62,7 +63,7 @@
       
       <div class="carousel">
         <div class="slide">
-          <img src="Bilder/bild-slide bg1.jpg" alt="Slide 1" aria-label="Haarschnitte Haarpflege Haarfarben Studio Friseursalon Friseur" loading="lazy" />
+          <img src="Bilder/bild-slide-bg1.jpg" alt="Slide 1" aria-label="Haarschnitte Haarpflege Haarfarben Studio Friseursalon Friseur" loading="lazy" />
           <div class="caption">
             <h1>Perfekte Haarschnitte</h1>
             <p>
@@ -120,7 +121,7 @@
       <section class="about-owner">
         <div class="owner-container">
           <div class="owner-photo">
-            <img src="Bilder/Anna Müller.jpg" alt="Anna Müller - Inhaberin des Beauty Rooms">
+            <img src="Bilder/Anna_Müller.jpg" alt="Anna Müller - Inhaberin des Beauty Rooms">
           </div>
           <div class="owner-description">
             <h2>Über Anna Müller</h2>
@@ -143,17 +144,17 @@
     <footer>
         <ul class="info_list">
           <li><a href="kontakt.html">Kontakt</a></li>
-          <li><a href="#">Impressum</a></li>
-          <li><a href="#">Datenschutz</a></li>
+          <li><a href="javascript:void(0);">Impressum</a></li>
+          <li><a href="javascript:void(0);">Datenschutz</a></li>
         </ul>
         <div class="info_link">
-          <a href="#"
+          <a href="javascript:void(0);"
             ><img src="Bilder/phone-call.png" aria-label="phone ikon" loading="lazy" alt="call" 
           /></a>
-          <a href="#"
+          <a href="javascript:void(0);"
             ><img src="Bilder/instagram.png" aria-label="instagram ikon" loading="lazy" alt="instagram" 
           /></a>
-          <a href="#"
+          <a href="javascript:void(0);"
             ><img src="Bilder/facebook.png " aria-label="facebook ikon" loading="lazy" alt="facebook" 
           /></a>
         </div>
