--- a/team.html
+++ b/team.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="Permissions-Policy" content="browsing-topics=()">
     <title>Team Anna Müller Beauty Room</title>
     <link rel="stylesheet" href="CSS/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -44,10 +45,9 @@
       <div class="logo">
         <a href="index.html"
           ><img
-            src="Bilder/logo.png"
+            src="./Bilder/Logo_1.png"
             alt="Logo Anna Müller Beauty Room"
             aria-label="Logo Anna Müller Beauty Room"
-            loading="lazy"
         /></a>
       </div>
 
@@ -87,7 +87,7 @@
             <!-- Anna Müller -->
             <div class="team-member">
               <img
-                src="Bilder/Anna Müller.jpg"
+                src="Bilder/Anna_Müller.jpg"
                 alt="Anna Müller"
                 class="team-photo"
               />
@@ -98,7 +98,7 @@
             <!-- Thomas Weber -->
             <div class="team-member">
               <img
-                src="Bilder/Thomas Weber.jpg"
+                src="Bilder/Thomas_Weber.jpg"
                 alt="Thomas Weber"
                 class="team-photo"
               />
@@ -110,7 +110,7 @@
             <!-- Lena Fischer -->
             <div class="team-member">
               <img
-                src="Bilder/Lena Fischer.jpg"
+                src="Bilder/Lena_Fischer.jpg"
                 alt="Lena Fischer"
                 class="team-photo"
               />
@@ -123,7 +123,7 @@
             <!-- Markus Schmidt -->
             <div class="team-member">
               <img
-                src="Bilder/Markus Schmidt.jpg"
+                src="Bilder/Markus_Schmidt.jpg"
                 alt="Markus Schmidt"
                 class="team-photo"
               />
@@ -145,7 +145,7 @@
             als FriseurIn, RezeptionistIn, Beauty-AssistentIn, AuszubildendeR.
           </p>
           <div class="button_div">
-            <a href="#" class="cta-button">Jetzt Karriere machen</a>
+            <a href="javascript:void(0);" class="cta-button">Jetzt Karriere machen</a>
           </div>
         </div>
       </section>
@@ -153,25 +153,25 @@
     <footer>
       <ul class="info_list">
         <li><a href="kontakt.html">Kontakt</a></li>
-        <li><a href="#">Impressum</a></li>
-        <li><a href="#">Datenschutz</a></li>
+        <li><a href="javascript:void(0);">Impressum</a></li>
+        <li><a href="javascript:void(0);">Datenschutz</a></li>
       </ul>
       <div class="info_link">
-        <a href="#"
+        <a href=""
           ><img
             src="Bilder/phone-call.png"
             aria-label="phone ikon"
             loading="lazy"
             alt="call"
         /></a>
-        <a href="#"
+        <a href="javascript:void(0);"
           ><img
             src="Bilder/instagram.png"
             aria-label="instagram ikon"
             loading="lazy"
             alt="instagram"
         /></a>
-        <a href="#"
+        <a href="javascript:void(0);"
           ><img
             src="Bilder/facebook.png "
             aria-label="facebook ikon"
