--- a/leistungen.html
+++ b/leistungen.html
@@ -2,6 +2,7 @@
 <html lang="de">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="Permissions-Policy" content="browsing-topics=()">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Leistungen Anna Müller Beauty Room</title>
     <link rel="stylesheet" href="CSS/style.css" />
@@ -44,10 +45,9 @@
       <div class="logo">
         <a href="index.html"
           ><img
-            src="Bilder/logo.png"
+            src="./Bilder/Logo_1.png"
             alt="Logo Anna Müller Beauty Room"
             aria-label="Logo Anna Müller Beauty Room"
-            loading="lazy"
         /></a>
       </div>
 
@@ -130,25 +130,25 @@
     <footer>
       <ul class="info_list">
         <li><a href="kontakt.html">Kontakt</a></li>
-        <li><a href="#">Impressum</a></li>
-        <li><a href="#">Datenschutz</a></li>
+        <li><a href="javascript:void(0);">Impressum</a></li>
+        <li><a href="javascript:void(0);">Datenschutz</a></li>
       </ul>
       <div class="info_link">
-        <a href="#"
+        <a href="javascript:void(0);"
           ><img
             src="Bilder/phone-call.png"
             aria-label="phone ikon"
             loading="lazy"
             alt="call"
         /></a>
-        <a href="#"
+        <a href="javascript:void(0);"
           ><img
             src="Bilder/instagram.png"
             aria-label="instagram ikon"
             loading="lazy"
             alt="instagram"
         /></a>
-        <a href="#"
+        <a href="javascript:void(0);"
           ><img
             src="Bilder/facebook.png "
             aria-label="facebook ikon"
